SSL/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: review-v1
spec:
  selector:
    matchLabels:
      app: review
      version: v1
  replicas: 3
  template:
    metadata:
      labels:
        app: review
        version: v1
    spec:
      containers:
      - image: dogra21703/istio-header:v1
        name: dogra
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: review-v2
spec:
  selector:
    matchLabels:
      app: review
      version: v2
  replicas: 3
  template:
    metadata:
      labels:
        app: review
        version: v2
    spec:
      containers:
      - image: dogra21703/istio-header:v2
        name: nginx
        ports:
        - containerPort: 80
