SSL/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: review-svc
spec:
  selector:
    app: review
  ports:
   - protocol: "TCP"
     port: 80
     targetPort: 80
  type: ClusterIP
