SSL/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: ssl-service
spec:
  hosts:
    - "test.bookinfo.com"   
  gateways:
    - "review"
    - mesh
  http: 
  - route:
    - destination:
        host: review-svc
        subset: v1
      weight: 50 
    - destination:
        host: review-svc
        subset: v2
      weight: 50
